<resources>
    <string name="app_name">Mon Isi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ble_not_supported">Device does not support BLE</string>
    <string name="request_major">Enter major number(s) to monitor</string>
    <string name="major_button_name">Set major</string>
    <string name="major_monitor_text">Majors: %1$s</string>
    <string name="mode_button_name">Mode</string>
    <string name="fast_radio_button_name">Fast</string>
    <string name="slow_radio_buton_name">Slow</string>
    <string name="balance_radio_button_name">Balance</string>
    <string name="sd_card_yes_message">SD Card Detected</string>
    <string name="sd_card_no_message">SD Card Is Not Detected</string>
</resources>
